# zenops

./: .env.example  .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260703_add_server_inventories.py
backend/core/: config.py  database.py
backend/models/: __init__.py  binding.py  inventory.py  server.py
backend/repositories/: server_repository.py
backend/routers/: agent_router.py  discord_binding_router.py  server_router.py
backend/schemas/: agent.py  server.py
backend/services/: agent_service.py  binding_service.py  cognee_client.py  execution_resolver.py  memory_service.py  openclaw_client.py  prompt_builder.py  server_service.py
backend/tests/: conftest.py  test_routes.py  test_services.py
discord-bot/: bot.py  main.py  requirements.txt
discord-bot/commands/: ask.py  modals.py  servers.py  utils.py  views.py  zen.py
discord-bot/core/: config.py
discord-bot/services/: backend_client.py
